--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.58.0",
+        "sass-loader": "^12.6.0",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.7.14"
+    },
+    "dependencies": {
+        "bootstrap": "^5.2.3",
+        "bootstrap-vue": "^2.23.1",
+        "vue": "^2.7.14"
     }
 }
