--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "paquettg/php-html-parser": "^3.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
