--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.3",
         "bootstrap-vue": "^2.23.1",
         "vue": "^2.7.14"
     }
